--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <title>Proyect</title>
   </head>
     <body>
-        <product-card></product-card>    
+        <product-card 
+          img-model = "./imgs/model.png"  
+          img = "./imgs/bg.jpg"        
+        ></product-card>    
         <script type="module" src="./app.js"></script>
     </body>
 </html>
